--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CatsApplication</string>
+
+    <string name="cats_message_error">Не удалось загрузить картинки. Проверьте интернет соединение.</string>
 </resources>
